# NNwithFixedZero

./: CMakeLists.txt  Makefile  README.md  memristor
boost/spirit/home/support/char_encoding/unicode/: create_tables.cpp
original_weight/: weight.txt
src/: CMakeLists.txt  WW.txt  fullyconnected_layer.cpp  fullyconnected_layer.h  layer.h  main.cpp  main2.cpp  network.h  output_layer.h
